# Cai_Agent

./: CHANGELOG.md  CHANGELOG.zh-CN.md  README-DEBUG.md  README.md  README.zh-CN.md  cai-agent.toml  domain-discovery-report.md
cai-agent/: pyproject.toml
cai-agent/src/cai_agent/: __main__.py  api_http_server.py  config.py  context_compaction.py  doc_writer.py  gateway_lifecycle.py  gateway_production.py  graph.py  llm.py  llm_factory.py  model_gateway.py  ops_dashboard.py  ops_http_server.py  privacy_filter.py  tools.py  tui.py  workflow.py
cai-agent/src/cai_agent.egg-info/: SOURCES.txt
cai-agent/src/cai_agent/protocol/: __init__.py  a2a_card.py  a2a_models.py  acp_models.py  mcp_tools.py
cai-agent/src/cai_agent/runtime/: registry.py
cai-agent/src/cai_agent/schemas/: context_compaction_eval_v1.schema.json
cai-agent/src/cai_agent/server/: __init__.py  a2a_server.py  acp_server.py  mcp_server.py
cai-agent/src/cai_agent/templates/: cai-agent.example.toml  cai-agent.starter.toml
cai-agent/tests/: test_api_http_server.py  test_context_compaction.py  test_context_compaction_regression_fixtures.py  test_gateway_lifecycle_cli.py  test_llm_empty_content_guard.py  test_ops_http_server.py  test_privacy_filter.py  test_runtime_local.py
cai-agent/tests/fixtures/context_compaction_regression/: README.md  n10_case_heavy_tools.json  n10_case_prior_summary_merge.json
docs/: AGENT_PROTOCOL_INTEGRATION_ANALYSIS.md  AI_DOC_WRITER_DESIGN.md  CLOUD_RUNTIME_OOS.zh-CN.md  COMPLETED_TASKS_ARCHIVE.zh-CN.md  CONTEXT_AND_COMPACT.zh-CN.md  CONTEXT_COMPACTION_FUTURE_PLAN.zh-CN.md  (+13 more)
(+41 files in other folders)
