[project]
name = "cai-agent"
version = "0.6.18"
description = "Local LM Studio agent with LangGraph and sandboxed tools"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "httpx>=0.27",
    "textual>=0.85",
]

[project.scripts]
cai-agent = "cai_agent.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
mcp = [
    "mcp>=1.0",
    "starlette>=0.27",
    "uvicorn>=0.27",
]
a2a = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
acp = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
server = [
    "mcp>=1.0",
    "fastapi>=0.110",
    "starlette>=0.27",
    "uvicorn>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cai_agent = ["templates/*.toml", "schemas/*.json", "prompts/*.md"]
